--- a/ios/SimformPractical/Info.plist
+++ b/ios/SimformPractical/Info.plist
@@ -37,6 +37,10 @@
 			</dict>
 		</dict>
 	</dict>
+
+<key>NSPhotoLibraryUsageDescription</key>
+  <string>Simform Practical wants to access your Picture Library</string>
+
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
 	<key>UILaunchStoryboardName</key>
