--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.5",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.3",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-permissions": "^2.1.5",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-size-matters": "^0.3.0",
+    "react-native-video": "^4.4.5",
     "react-navigation": "^4.3.8",
     "react-navigation-stack": "^2.3.13",
     "react-redux": "^7.2.0",
