--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,5 +33,6 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+        maven {url 'https://dl.bintray.com/kotlin/kotlin-dev/'}
     }
 }
