--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "^2.7.0",
     "react-native-size-matters": "^0.3.0",
     "react-native-video": "^4.4.5",
+    "react-native-whc-loading": "^1.0.3",
     "react-navigation": "^4.3.8",
     "react-navigation-stack": "^2.3.13",
     "react-redux": "^7.2.0",
