--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-share": "^3.7.0",
     "react-native-size-matters": "^0.3.0",
     "react-native-video": "^4.4.5",
     "react-native-whc-loading": "^1.0.3",
